Validate the build in CI and document the Java 25 target in README
Expand .github/workflows/build.yml into a five-job pipeline so the
migration is checked mechanically on every push rather than by hand:

  * repository-integrity - asserts the frozen COBOL corpus under app/ is
    unmodified and that the committed environment template stays in step
    with the profiles that read it.
  * verify - pins Temurin JDK 25 and Maven 3.9.11 so the build is
    reproducible, compiles under the zero-warning configuration, runs the
    unit tier and enforces the JaCoCo line-coverage and Javadoc doclint
    gates.
  * integration - runs the Testcontainers PostgreSQL and LocalStack tiers
    together with the end-to-end suite against a real application context.
  * image-scan - builds the runtime image and scans it, keeping the
    dependency-check report as an artefact.
  * gate-evidence - aggregates the preceding jobs and publishes the
    evidence for the eight validation gates.

Append a Java 25 section to README.md describing the prerequisites, the
Maven build and test commands, how to bring up the local topology and run
the service against it, the REST and Actuator surface, and the mapping
from the legacy runtime constructs to their Java replacements. The
existing legacy transaction, program and JCL inventory tables are left
exactly as they were, so the document still serves as the reference for
the original system.